@@ -16,4 +16,5 @@ if $(FLTKLIBS)
 	MakeTest egroup : egroup.cpp : $(FLTKLIBS) ;
 	MakeTest egroup2 : egroup2.cpp : $(FLTKLIBS) ;
 	MakeTest icon_chooser : icon_chooser.cpp : $(FLTKLIBS) ;
+	MakeTest combobox : combobox.cpp : $(FLTKLIBS) ;
 }
