@@ -1,3 +1,8 @@
+2007-05-21  Sanel <karijes@users.sourceforge.net>
+
+	* Added ComboBox.{h,cpp} with test/example/combobox.cpp, althought
+	unfinished yet.
+
 2007-05-11  Sanel <karijes@users.sourceforge.net>
 
 	* MimeType functions will do nothing if mime is not correctly
